Fixed horizontal scroll bar

--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -10,6 +10,6 @@
         left: 50%;
         position: relative;
         transform: translateX(-50%);
-        width: 100vw;
+        width: 100%;
     }
 }
