--- a/blocks/place/__text/place__text.css
+++ b/blocks/place/__text/place__text.css
@@ -6,5 +6,6 @@
 @media (min-width: 320px) and (max-width: 767px) {
     .place__text{
        margin-left: 24px;
+       margin-right: 24px;
     }
 }
